# obsidian-sync

./: .gitignore  CLAUDE.md  LICENSE  README.md  mise.toml  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: configuration.md  getting-started.md  index.md
docs/reference/: api.md  cli.md
src/obsidian_sync/: __init__.py  cli.py  config.py  daemon.py  git_ops.py  template.py
src/obsidian_sync/templates/: com.alexfurrier.obsidian-sync.plist  io.github.obsidian-sync.plist  obsidian-sync.service
tests/: conftest.py  test_cli.py  test_config.py  test_daemon.py  test_e2e.py  test_git_ops.py  test_smoke.py  test_template.py
